Moved DefaultHtmlConventions to sample project. They don't belong in the adapter. Resolved all HtmlConventions in the TagProfileLibrary setup. Added overridden conventions in the sample project.

--- a/src/WebTest/Sample.csproj
+++ b/src/WebTest/Sample.csproj
@@ -83,6 +83,9 @@
     <Reference Include="System.Web.Mobile" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application\CustomHtmlConventions.cs" />
+    <Compile Include="Application\DefaultHtmlConventions.cs" />
+    <Compile Include="Application\HtmlConventionRegistry.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
