--- a/src/HtmlTags.Adapter/HtmlTags.Adapter.csproj
+++ b/src/HtmlTags.Adapter/HtmlTags.Adapter.csproj
@@ -43,6 +43,14 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Castle\Castle.Windsor.dll</HintPath>
     </Reference>
+    <Reference Include="FubuMVC.Core, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\FubuMVC.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="FubuMVC.UI, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\FubuMVC.UI.dll</HintPath>
+    </Reference>
     <Reference Include="HtmlTags, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\HtmlTags.dll</HintPath>
@@ -67,35 +75,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DynamicInputExtensions.cs" />
-    <Compile Include="Fubu\Configuration\AccessorDef.cs" />
-    <Compile Include="Fubu\Configuration\ElementRequest.cs" />
-    <Compile Include="Fubu\Configuration\Interfaces.cs" />
-    <Compile Include="Fubu\Configuration\LambdaElementBuilder.cs" />
-    <Compile Include="Fubu\Configuration\LambdaElementModifier.cs" />
-    <Compile Include="Fubu\Forms\DefinitionListLabelAndField.cs" />
-    <Compile Include="Fubu\Forms\FormLineExpression.cs" />
-    <Compile Include="Fubu\Forms\ILabelAndFieldLayout.cs" />
-    <Compile Include="Fubu\Accessor.cs" />
-    <Compile Include="Fubu\BasicExtensions.cs" />
-    <Compile Include="Fubu\Cache.cs" />
-    <Compile Include="Fubu\ExpressionsExtensions.cs" />
-    <Compile Include="Fubu\FubuException.cs" />
-    <Compile Include="Fubu\HtmlConventionRegistry.cs" />
-    <Compile Include="Fubu\PropertyChain.cs" />
-    <Compile Include="Fubu\ReflectionHelper.cs" />
-    <Compile Include="Fubu\SingleProperty.cs" />
-    <Compile Include="Fubu\Stringifier.cs" />
-    <Compile Include="Fubu\TypeExtensions.cs" />
     <Compile Include="Configuration\HtmlTagsRegistry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configuration\RegistryBase.cs" />
-    <Compile Include="Fubu\Tags\TagActionExpression.cs" />
-    <Compile Include="Fubu\Tags\TagFactory.cs" />
-    <Compile Include="Fubu\Tags\TagFactoryExpression.cs" />
-    <Compile Include="Fubu\Tags\TagGenerator.cs" />
-    <Compile Include="Fubu\Tags\TagProfile.cs" />
-    <Compile Include="Fubu\Tags\TagProfileExpression.cs" />
-    <Compile Include="Fubu\Tags\TagProfileLibrary.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
